# timeboard

./: README.md  pyproject.toml
apps/timeboard/: admin.py  apps.py  models.py  plots.py
apps/timeboard/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py  wsgi.py
